# CaelusOld

./: .gitignore  .gitmodules  CMakeLists.txt  compile_shaders.sh
include/engine/: Constants.hpp  Types.hpp
include/engine/core/: Application.hpp  Callbacks.hpp  Constants.hpp  Intrinsics.hpp  Types.hpp  Window.hpp
include/engine/core/components/: Camera.hpp  Mesh.hpp  Scene.hpp  Texture.hpp
include/engine/core/components/buffers/: DescriptorBuffer.hpp  GenericBuffer.hpp  InstanceBuffer.hpp  UniformBuffer.hpp  VertexBuffer.hpp
include/engine/core/components/manager/: AssetManager.hpp  DescriptorLayoutManager.hpp  DescriptorSetManager.hpp  PipelineLayoutManager.hpp  ResourceManager.hpp
include/engine/core/components/managers/: SceneManager.hpp
include/engine/core/details/: ApplicationData.hpp  Details.hpp  VulkanContext.hpp  VulkanData.hpp
include/engine/core/info/: DescriptorSetCreateInfo.hpp  Info.hpp  PipelineCreateInfo.hpp
include/engine/core/renderer/: Renderer.hpp
include/engine/core/renderer/vulkan/: CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Fence.hpp  Framebuffer.hpp  Instance.hpp  Pipeline.hpp  RenderPass.hpp  Semaphore.hpp  Swapchain.hpp
include/engine/core/util/: Util.hpp
include/engine/core/vulkan/: DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Framebuffer.hpp  Instance.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  Swapchain.hpp  VulkanContext.hpp
include/engine/experimental/: BufferContainer.hpp
include/engine/logger/: Logger.hpp
resources/shaders/: test.frag  test.frag.spv  test.vert  test.vert.spv
src/: main.cpp
src/engine/core/: Application.cpp  Callbacks.cpp  Window.cpp
src/engine/core/components/: Camera.cpp  Mesh.cpp  Scene.cpp
src/engine/core/components/buffers/: DescriptorBuffer.cpp  InstanceBuffer.cpp  UniformBuffer.cpp  VertexBuffer.cpp
src/engine/core/components/manager/: AssetManager.cpp  DescriptorLayoutManager.cpp  DescriptorSetManager.cpp  PipelineLayoutManager.cpp  ResourceManager.cpp  SceneManager.cpp
src/engine/core/info/: Info.cpp  PipelineCreateInfo.cpp
src/engine/core/renderer/: Renderer.cpp
src/engine/core/renderer/vulkan/: CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  Instance.cpp  Pipeline.cpp  RenderPass.cpp  Semaphore.cpp  Swapchain.cpp
src/engine/core/util/: Util.cpp
src/engine/core/vulkan/: CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  Instance.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderPass.cpp  Semaphore.cpp  Swapchain.cpp  VulkanContext.cpp
